crates/jsonschema-codegen/tests/ui/invalid_min_contains_value.rs
#[jsonschema::validator(schema = r#"{"type":"array","contains":{},"minContains":"x"}"#)]
struct Validator;

fn main() {}
